# server/cmd/api/core/docs/core_core_swagger.yaml
@@ -26,16 +26,6 @@ definitions:
     - name
     - value
     type: object
-  request.AssignRepoToTeam:
-    properties:
-      githubRepoId:
-        type: integer
-      repoName:
-        type: string
-    required:
-    - githubRepoId
-    - repoName
-    type: object
   request.CreateCluster:
     properties:
       name:
@@ -250,6 +240,23 @@ definitions:
     required:
     - inviteUrlPrefix
     - toEmail
+    type: object
+  request.SetTeamRepositories:
+    properties:
+      repositories:
+        items:
+          $ref: '#/definitions/request.TeamRepoAssignment'
+        type: array
+    type: object
+  request.TeamRepoAssignment:
+    properties:
+      githubRepoId:
+        type: integer
+      repoName:
+        type: string
+    required:
+    - githubRepoId
+    - repoName
     type: object
   request.UpdateDeployFromGit:
     properties:
@@ -2223,8 +2230,8 @@ paths:
       summary: Get repositories assigned to a team
       tags:
       - team
-    post:
-      operationId: assignRepoToTeam
+    put:
+      operationId: setTeamRepositories
       parameters:
       - description: User ID
         in: header
@@ -2236,41 +2243,16 @@ paths:
         name: teamId
         required: true
         type: integer
-      - description: Assign Repo
+      - description: Team Repositories
         in: body
         name: data
         required: true
         schema:
-          $ref: '#/definitions/request.AssignRepoToTeam'
-      responses:
-        "201":
-          description: Created
-      summary: Assign a GitHub repository to a team
-      tags:
-      - team
-  /teams/{teamId}/repos/{repoId}:
-    delete:
-      operationId: unassignRepoFromTeam
-      parameters:
-      - description: User ID
-        in: header
-        name: X-User-ID
-        required: true
-        type: string
-      - description: Team ID
-        in: path
-        name: teamId
-        required: true
-        type: integer
-      - description: GitHub Repo ID
-        in: path
-        name: repoId
-        required: true
-        type: integer
+          $ref: '#/definitions/request.SetTeamRepositories'
       responses:
         "204":
           description: No Content
-      summary: Unassign a GitHub repository from a team
+      summary: Set repositories assigned to a team
       tags:
       - team
 securityDefinitions:
